Added product endpoints and modified authentication for user and admin